--- a/package.json
+++ b/package.json
@@ -12,7 +12,9 @@
     "next": "14.1.3",
     "react": "^18",
     "react-dom": "^18",
-    "react-toastify": "^10.0.5"
+    "react-icons": "^5.0.1",
+    "react-toastify": "^10.0.5",
+    "sonner": "^1.4.3"
   },
   "devDependencies": {
     "autoprefixer": "^10.0.1",
