--- a/package.json
+++ b/package.json
@@ -1,26 +1,29 @@
 {
-  "name": "club_hub",
-  "version": "0.1.0",
-  "private": true,
-  "scripts": {
-    "dev": "next dev",
-    "build": "next build",
-    "start": "next start",
-    "lint": "next lint"
-  },
-  "dependencies": {
-    "@react-oauth/google": "^0.12.1",
-    "jwt-decode": "^4.0.0",
-    "next": "14.1.3",
-    "react": "^18",
-    "react-dom": "^18",
-    "react-icons": "^5.0.1",
-    "react-toastify": "^10.0.5",
-    "sonner": "^1.4.3"
-  },
-  "devDependencies": {
-    "autoprefixer": "^10.0.1",
-    "postcss": "^8",
-    "tailwindcss": "^3.3.0"
-  }
+ "name": "club_hub",
+ "version": "0.1.0",
+ "private": true,
+ "scripts": {
+  "dev": "next dev",
+  "build": "next build",
+  "start": "next start",
+  "lint": "next lint"
+ },
+ "dependencies": {
+  "@react-oauth/google": "^0.12.1",
+  "jwt-decode": "^4.0.0",
+  "next": "14.1.3",
+  "react": "^18",
+  "react-dom": "^18",
+  "react-icons": "^5.0.1",
+  "react-toastify": "^10.0.5",
+  "sonner": "^1.4.3"
+ },
+ "devDependencies": {
+  "autoprefixer": "^10.0.1",
+  "postcss": "^8",
+  "tailwindcss": "^3.3.0"
+ },
+ "prettier": {
+  "tabWidth": 2
+ }
 }
