--- a/package.json
+++ b/package.json
@@ -9,14 +9,21 @@
     "lint": "next lint"
   },
   "dependencies": {
+    "@radix-ui/react-dialog": "^1.0.5",
     "@react-oauth/google": "^0.12.1",
+    "class-variance-authority": "^0.7.0",
+    "clsx": "^2.1.0",
     "jwt-decode": "^4.0.0",
+    "lucide-react": "^0.358.0",
     "next": "14.1.3",
     "react": "^18",
     "react-dom": "^18",
+    "react-fast-marquee": "^1.6.4",
     "react-icons": "^5.0.1",
     "react-toastify": "^10.0.5",
-    "sonner": "^1.4.3"
+    "sonner": "^1.4.3",
+    "tailwind-merge": "^2.2.2",
+    "tailwindcss-animate": "^1.0.7"
   },
   "devDependencies": {
     "autoprefixer": "^10.0.1",
