--- a/package.json
+++ b/package.json
@@ -20,6 +20,7 @@
     "react-dom": "^18",
     "react-fast-marquee": "^1.6.4",
     "react-icons": "^5.0.1",
+    "react-scroll-parallax": "^3.4.5",
     "react-toastify": "^10.0.5",
     "sonner": "^1.4.3",
     "tailwind-merge": "^2.2.2",
