--- a/package.json
+++ b/package.json
@@ -13,10 +13,12 @@
     "@react-oauth/google": "^0.12.1",
     "class-variance-authority": "^0.7.0",
     "clsx": "^2.1.0",
+    "framer-motion": "^11.0.14",
     "jwt-decode": "^4.0.0",
     "lucide-react": "^0.358.0",
     "next": "14.1.3",
     "react": "^18",
+    "react-card-flip": "^1.2.2",
     "react-dom": "^18",
     "react-fast-marquee": "^1.6.4",
     "react-icons": "^5.0.1",
