--- a/package.json
+++ b/package.json
@@ -16,6 +16,7 @@
     "framer-motion": "^11.0.14",
     "jwt-decode": "^4.0.0",
     "lucide-react": "^0.358.0",
+    "mongoose": "^8.2.2",
     "next": "14.1.3",
     "react": "^18",
     "react-card-flip": "^1.2.2",
