--- a/package.json
+++ b/package.json
@@ -9,6 +9,7 @@
     "lint": "next lint"
   },
   "dependencies": {
+    "@prisma/client": "5.11.0",
     "@radix-ui/react-dialog": "^1.0.5",
     "@react-oauth/google": "^0.12.1",
     "class-variance-authority": "^0.7.0",
@@ -18,6 +19,7 @@
     "lucide-react": "^0.358.0",
     "mongoose": "^8.2.2",
     "next": "14.1.3",
+    "prisma": "^5.11.0",
     "react": "^18",
     "react-card-flip": "^1.2.2",
     "react-dom": "^18",
