--- a/package.json
+++ b/package.json
@@ -19,6 +19,7 @@
     "lucide-react": "^0.358.0",
     "mongoose": "^8.2.2",
     "next": "14.1.3",
+    "next-auth": "^4.24.7",
     "prisma": "^5.11.0",
     "react": "^18",
     "react-card-flip": "^1.2.2",
